kubernetes/cloudflared/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: cloudflared
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/part-of: cloudflared
  name: cloudflared
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: cloudflared
      app.kubernetes.io/name: cloudflared
      app.kubernetes.io/part-of: cloudflared
  template:
    metadata:
      labels:
        app.kubernetes.io/component: cloudflared
        app.kubernetes.io/name: cloudflared
        app.kubernetes.io/part-of: cloudflared
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.ping_group_range
            value: "65532 65532"
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2025.7.0
          args:
            - tunnel
            - --no-autoupdate
            - --metrics
            - 0.0.0.0:2000
            - run
          ports:
            - name: metrics
              containerPort: 2000
          securityContext:
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              ephemeral-storage: 50M
            limits:
              ephemeral-storage: 50M
